see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

14-Oct-2010 Mark Dexter
+ article0003Test added to test effect of up-path category state on article menu items
# fix bug in controlpanel0004Test

12-Oct-2010 Mark Dexter
# Fix multiple system tests for ACL UI changes
# Fix problem in language0001test.php from Category Manager UI change

10-Oct-2010 Mark Dexter
^ Added option in configdef.php and doInstall.php to install without sample data

09-Oct-2010 Mark Dexter
^ Changed JAccessTest to provide 100% code coverage

08-Oct-2010 Mark Dexter
^ Changed JAccessTest to use test.xml data instead of database data and added testCheckGroup method

15-Sep-2010 Mark Dexter
# [#22419] Fixes for Language0001 System Test (Thanks Matt Thomas)
# Fixed restoreDefaultGlobalPermissions method in SeleniumJoomlaTestCase
# Fixed problem in controlpanel0005 from sample data change

01-Sep-2010 Mark Dexter
 + Added JDatabaseQueryElementTest

01-Sep-2010 Ian MacLennan
 + Added JUser::save test

30-Aug-2010 Mark Dexter
^ Improved documentation for JUserHelper unit tests (Thanks Niels Braczek!)

29-Aug-2010 Mark Dexter
+ [#20726] Unit tests for JUserHelper
+ [#22021] ACL System Tests

28-Aug-2010 Ian MacLennan
 # Fixed errors in tests and added mocks to deal with some failures properly

26-Aug-2010 Ian MacLennan
 + Added unit test for JFormRuleEmail

20-Aug-2010 Mark Dexter
# Fix control_panel0004Test for category formatting changes

06-Aug-2010 Mark Dexter
^ Added new var to configdef.php to allow doInstall to set caching to different values

22-Jul-2010 Mark Dexter
# Fix control_panel0004Test and add new acl003Test (Matt Thomas)

16-Jul-2010 Mark Dexter